--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.9.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "multer": "^1.4.5-lts.2",
